Elasticsearch 6 image
use securityadmin.sh
add get_security_conf_index
rename acl files to remove sg_ prefix
use unified install scripts
minimize difference between upstream and downstream Dockerfiles